--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,8 @@
     "action": {
         "default_popup": "menu.html",
         "default_icon": "icon.png"
-    }
+    },
+    "permissions": [
+        "activeTab"
+    ]
 }
